# graffiti

./: .depend  .gitignore  Makefile  Makefile.common  README  README.md  graffiti.eliom  opam
.github/workflows/: master.yml
extended/: Makefile  Makefile.common  Makefile.options  client.ml  common.ml  feed.ml  graffiti.conf.in  graffiti.eliom  server.ml
extended/css/: graffiti.css  slider.css
extended/static/css/: graffiti.css
simple/: Makefile  Makefile.common  Makefile.options  README  README.md  dune  graffiti.conf.in  graffiti.eliom
simple/css/: graffiti.css
simple/static/css/: graffiti.css
web_app/: Makefile  Makefile.options  client_canvas.eliom  client_core.eliom  client_core.eliom.~1~  client_detect_mobile.eliom  client_event_tools.eliom  client_event_tools.eliomi  client_ext_mod_tools.eliom  client_header.eliom  client_js_tools.eliom  client_js_tools.eliomi  client_menu.eliom  client_menu_tools.eliom  client_mobile.eliom  client_palette.eliom  client_phonegap.eliom  client_phonegap.eliomi  client_replay.eliom  client_tools.eliom  client_tools.eliomi  color_picker.eliom  color_picker.eliomi  graffiti.conf.in  grf_color_picker.eliom  grf_color_picker.eliomi  grf_slider.eliom  grf_slider.eliomi  server_core.eliom  server_html.eliom  server_image.eliom  server_register.eliom  server_service.eliom  server_tools.eliom  shared_tools.eliom  slide_tools.eliom  slide_tools.eliomi
web_app/static/: graffiti.appcache
web_app/static/css/: color_picker.css  ew_slider.css  ew_table_color_picker.css  graffiti.css  graffiti_handheld_screen.css  grf_slider.css  (+5 more)
(+10 files in other folders)
